[package]
name = "offimg_gallery"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4.31", features = ["serde"] }
embedded-graphics = "0.8.1"
indicatif = { version = "0.17.7", features = ["rayon"] }
once_cell = "1.18.0"
rayon = "1.8.0"
scraper = "0.17.1"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tinybmp = "0.5.0"
ureq = "2.8.0"
url = "2.4.1"
urlencoding = "2.1.3"
